--- a/index.html
+++ b/index.html
@@ -1,39 +1,204 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<title> New Site Coming Soon </title>
+ <!--%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+  %
+  % Author:  Tyler Treadway
+  % Date:    4-20-2020 
+  % Course:  ADPR297 Web Design w/Professor Boone
+  % Site:    https://preownedvideogames.000webhostapp.com
+  % Description: PreOwnedVideoGames allows site visitors to see our
+  %              used XBOX, Wii and GameCube videogames for sale.  Site users
+  %              can email the site owner to check inventory and verify order.
+  %              Once verified product ship to buyer COD.
+  % 
+  % Page Name: index.html
+  % Page Summary & Features: 
+  %      - Site home page  
+  %      - Slide Show that displays sample product inventory every second.
+  %      - Animated GIF file showing site home page with marketing message
+  %      - Google Translate to accomodate international site visitors
+  %               
+  %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%-->
+<!doctype html>
+<html lang="en">
+<head>
+<title>Pre-Owned XBOX, WII and GAMECUBE For Sale</title>
+<!-- META TAGE -->
+<meta charset="utf-8">
+  <meta name="author" content="Tyler Treadway">
+  <meta name="description" content="Pre-Owned XBOX WII GAMECUBE Video Games For Sale">
+  <meta name="keywords" content="Pre, Owned, Pre-Owned, Video, Video Games, Games, Used, Xbox, Wii, GameCube">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.js"></script>
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1/jquery-ui.js"></script>
-<script type="text/javascript" src="jquery.idle-timer.js"></script>
-<script type="text/javascript">
-$(function() 
-{
-  var timeout = 8000;  //8000 milliseconds = 8 seconds 
-  $(document).bind("idle.idleTimer", function() {
-  //$("#status").html("User is idle :(").css("backgroundColor", "silver");
-  //alert("user idle for more than "+ (timeout/1000)+" secs")
-    window.location.href = "https://usatoday.com";
-});
+<!-- CSS -->
+<style>
+* {
+  box-sizing: border-box;
+}
 
-$(document).bind("active.idleTimer", function() 
-{
-  //$("#status").html("User is active :D").css("backgroundColor", "yellow");
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
+/* Black border (no margin above or below)*/
+hr {
+  margin-top: 0em;
+  margin-bottom: 0em;
+  border: 2px solid black;
+  border-radius: 5px
+}
+
+body {
+  margin: 0;
+  bgcolor: #89c4f4;
+}
+
+/* Style the header and footer */
+.header {
+  background-color: #FFEAA7;
+  padding: 5px;
+  text-align: center;
+}
+
+.footer {
+  background-color: #89c4f4;
+  text-align: center;
+  padding: 5px;
+} 
+
+/* Style the top navigation bar */
+.topnav {
+  overflow: hidden;
+  background-color: #89c4f4;
+}
+
+/* Style the topnav links */
+.topnav a {
+  float: left;
+  display: block;
+  color: black;
+  text-align: center;
+  padding: 7px 16px;
+  text-decoration: none;
+}
+
+/* Change color on hover */
+.topnav a:hover {
+  background-color: #FFEAA7;
+  color: black;
+}
+
+/* Create three equal columns that floats next to each other */
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 15px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
+@media screen and (max-width:600px) {
+  .column {
+    width: 100%;
+  }
+}
+
+</style>
+<!-- Google Translate Javascript Widget -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+<script>
+$(function(){
+	$('.fadein img:gt(0)').hide();
+	setInterval(function(){$('.fadein :first-child').fadeOut().next('img').fadeIn().end().appendTo('.fadein');}, 1000);
 });
-$.idleTimer(timeout);
-}); 
 </script>
 
+</style>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 
-<script type="text/javascript">window.NREUM||(NREUM={});NREUM.info = {"beacon":"bam.nr-data.net","errorBeacon":"bam.nr-data.net","licenseKey":"0c7a02d605","applicationID":"413162190","transactionName":"M1QBMhBSW0QAAUcKDAoeNhQLHFBAE00=","queueTime":15,"applicationTime":57,"agent":"","atts":""}</script><script type="text/javascript">(window.NREUM||(NREUM={})).loader_config={licenseKey:"0c7a02d605",applicationID:"413162190"};window.NREUM||(NREUM={}),__nr_require=function(e,n,t){function r(t){if(!n[t]){var i=n[t]={exports:{}};e[t][0].call(i.exports,function(n){var i=e[t][1][n];return r(i||n)},i,i.exports)}return n[t].exports}if("function"==typeof __nr_require)return __nr_require;for(var i=0;i<t.length;i++)r(t[i]);return r}({1:[function(e,n,t){function r(){}function i(e,n,t){return function(){return o(e,[u.now()].concat(f(arguments)),n?null:this,t),n?void 0:this}}var o=e("handle"),a=e(4),f=e(5),c=e("ee").get("tracer"),u=e("loader"),s=NREUM;"undefined"==typeof window.newrelic&&(newrelic=s);var p=["setPageViewName","setCustomAttribute","setErrorHandler","finished","addToTrace","inlineHit","addRelease"],l="api-",d=l+"ixn-";a(p,function(e,n){s[n]=i(l+n,!0,"api")}),s.addPageAction=i(l+"addPageAction",!0),s.setCurrentRouteName=i(l+"routeName",!0),n.exports=newrelic,s.interaction=function(){return(new r).get()};var m=r.prototype={createTracer:function(e,n){var t={},r=this,i="function"==typeof n;return o(d+"tracer",[u.now(),e,t],r),function(){if(c.emit((i?"":"no-")+"fn-start",[u.now(),r,i],t),i)try{return n.apply(this,arguments)}catch(e){throw c.emit("fn-err",[arguments,this,e],t),e}finally{c.emit("fn-end",[u.now()],t)}}}};a("actionText,setName,setAttribute,save,ignore,onEnd,getContext,end,get".split(","),function(e,n){m[n]=i(d+n)}),newrelic.noticeError=function(e,n){"string"==typeof e&&(e=new Error(e)),o("err",[e,u.now(),!1,n])}},{}],2:[function(e,n,t){function r(e,n){var t=e.getEntries();t.forEach(function(e){"first-paint"===e.name?c("timing",["fp",Math.floor(e.startTime)]):"first-contentful-paint"===e.name&&c("timing",["fcp",Math.floor(e.startTime)])})}function i(e,n){var t=e.getEntries();t.length>0&&c("lcp",[t[t.length-1]])}function o(e){if(e instanceof s&&!l){var n,t=Math.round(e.timeStamp);n=t>1e12?Date.now()-t:u.now()-t,l=!0,c("timing",["fi",t,{type:e.type,fid:n}])}}if(!("init"in NREUM&&"page_view_timing"in NREUM.init&&"enabled"in NREUM.init.page_view_timing&&NREUM.init.page_view_timing.enabled===!1)){var a,f,c=e("handle"),u=e("loader"),s=NREUM.o.EV;if("PerformanceObserver"in window&&"function"==typeof window.PerformanceObserver){a=new PerformanceObserver(r),f=new PerformanceObserver(i);try{a.observe({entryTypes:["paint"]}),f.observe({entryTypes:["largest-contentful-paint"]})}catch(p){}}if("addEventListener"in document){var l=!1,d=["click","keydown","mousedown","pointerdown","touchstart"];d.forEach(function(e){document.addEventListener(e,o,!1)})}}},{}],3:[function(e,n,t){function r(e,n){if(!i)return!1;if(e!==i)return!1;if(!n)return!0;if(!o)return!1;for(var t=o.split("."),r=n.split("."),a=0;a<r.length;a++)if(r[a]!==t[a])return!1;return!0}var i=null,o=null,a=/Version\/(\S+)\s+Safari/;if(navigator.userAgent){var f=navigator.userAgent,c=f.match(a);c&&f.indexOf("Chrome")===-1&&f.indexOf("Chromium")===-1&&(i="Safari",o=c[1])}n.exports={agent:i,version:o,match:r}},{}],4:[function(e,n,t){function r(e,n){var t=[],r="",o=0;for(r in e)i.call(e,r)&&(t[o]=n(r,e[r]),o+=1);return t}var i=Object.prototype.hasOwnProperty;n.exports=r},{}],5:[function(e,n,t){function r(e,n,t){n||(n=0),"undefined"==typeof t&&(t=e?e.length:0);for(var r=-1,i=t-n||0,o=Array(i<0?0:i);++r<i;)o[r]=e[n+r];return o}n.exports=r},{}],6:[function(e,n,t){n.exports={exists:"undefined"!=typeof window.performance&&window.performance.timing&&"undefined"!=typeof window.performance.timing.navigationStart}},{}],ee:[function(e,n,t){function r(){}function i(e){function n(e){return e&&e instanceof r?e:e?c(e,f,o):o()}function t(t,r,i,o){if(!l.aborted||o){e&&e(t,r,i);for(var a=n(i),f=v(t),c=f.length,u=0;u<c;u++)f[u].apply(a,r);var p=s[y[t]];return p&&p.push([b,t,r,a]),a}}function d(e,n){h[e]=v(e).concat(n)}function m(e,n){var t=h[e];if(t)for(var r=0;r<t.length;r++)t[r]===n&&t.splice(r,1)}function v(e){return h[e]||[]}function g(e){return p[e]=p[e]||i(t)}function w(e,n){u(e,function(e,t){n=n||"feature",y[t]=n,n in s||(s[n]=[])})}var h={},y={},b={on:d,addEventListener:d,removeEventListener:m,emit:t,get:g,listeners:v,context:n,buffer:w,abort:a,aborted:!1};return b}function o(){return new r}function a(){(s.api||s.feature)&&(l.aborted=!0,s=l.backlog={})}var f="nr@context",c=e("gos"),u=e(4),s={},p={},l=n.exports=i();l.backlog=s},{}],gos:[function(e,n,t){function r(e,n,t){if(i.call(e,n))return e[n];var r=t();if(Object.defineProperty&&Object.keys)try{return Object.defineProperty(e,n,{value:r,writable:!0,enumerable:!1}),r}catch(o){}return e[n]=r,r}var i=Object.prototype.hasOwnProperty;n.exports=r},{}],handle:[function(e,n,t){function r(e,n,t,r){i.buffer([e],r),i.emit(e,n,t)}var i=e("ee").get("handle");n.exports=r,r.ee=i},{}],id:[function(e,n,t){function r(e){var n=typeof e;return!e||"object"!==n&&"function"!==n?-1:e===window?0:a(e,o,function(){return i++})}var i=1,o="nr@id",a=e("gos");n.exports=r},{}],loader:[function(e,n,t){function r(){if(!x++){var e=E.info=NREUM.info,n=d.getElementsByTagName("script")[0];if(setTimeout(s.abort,3e4),!(e&&e.licenseKey&&e.applicationID&&n))return s.abort();u(y,function(n,t){e[n]||(e[n]=t)}),c("mark",["onload",a()+E.offset],null,"api");var t=d.createElement("script");t.src="https://"+e.agent,n.parentNode.insertBefore(t,n)}}function i(){"complete"===d.readyState&&o()}function o(){c("mark",["domContent",a()+E.offset],null,"api")}function a(){return O.exists&&performance.now?Math.round(performance.now()):(f=Math.max((new Date).getTime(),f))-E.offset}var f=(new Date).getTime(),c=e("handle"),u=e(4),s=e("ee"),p=e(3),l=window,d=l.document,m="addEventListener",v="attachEvent",g=l.XMLHttpRequest,w=g&&g.prototype;NREUM.o={ST:setTimeout,SI:l.setImmediate,CT:clearTimeout,XHR:g,REQ:l.Request,EV:l.Event,PR:l.Promise,MO:l.MutationObserver};var h=""+location,y={beacon:"bam.nr-data.net",errorBeacon:"bam.nr-data.net",agent:"js-agent.newrelic.com/nr-1167.min.js"},b=g&&w&&w[m]&&!/CriOS/.test(navigator.userAgent),E=n.exports={offset:f,now:a,origin:h,features:{},xhrWrappable:b,userAgent:p};e(1),e(2),d[m]?(d[m]("DOMContentLoaded",o,!1),l[m]("load",r,!1)):(d[v]("onreadystatechange",i),l[v]("onload",r)),c("mark",["firstbyte",f],null,"api");var x=0,O=e(6)},{}],"wrap-function":[function(e,n,t){function r(e){return!(e&&e instanceof Function&&e.apply&&!e[a])}var i=e("ee"),o=e(5),a="nr@original",f=Object.prototype.hasOwnProperty,c=!1;n.exports=function(e,n){function t(e,n,t,i){function nrWrapper(){var r,a,f,c;try{a=this,r=o(arguments),f="function"==typeof t?t(r,a):t||{}}catch(u){l([u,"",[r,a,i],f])}s(n+"start",[r,a,i],f);try{return c=e.apply(a,r)}catch(p){throw s(n+"err",[r,a,p],f),p}finally{s(n+"end",[r,a,c],f)}}return r(e)?e:(n||(n=""),nrWrapper[a]=e,p(e,nrWrapper),nrWrapper)}function u(e,n,i,o){i||(i="");var a,f,c,u="-"===i.charAt(0);for(c=0;c<n.length;c++)f=n[c],a=e[f],r(a)||(e[f]=t(a,u?f+i:i,o,f))}function s(t,r,i){if(!c||n){var o=c;c=!0;try{e.emit(t,r,i,n)}catch(a){l([a,t,r,i])}c=o}}function p(e,n){if(Object.defineProperty&&Object.keys)try{var t=Object.keys(e);return t.forEach(function(t){Object.defineProperty(n,t,{get:function(){return e[t]},set:function(n){return e[t]=n,n}})}),n}catch(r){l([r])}for(var i in e)f.call(e,i)&&(n[i]=e[i]);return n}function l(n){try{e.emit("internal-error",n)}catch(t){}}return e||(e=i),t.inPlace=u,t.flag=a,t}},{}]},{},["loader"]);</script><body>
-<form name="form1" method="post" action="http://ewr.detma.org" id="form1">
+</head>
+<body style="background-color:#FFEAA7">
+<div style="text-align:center" id="google_translate_element"></div>	
+<!-- Custom Giphy Animated Graphic Image -->
+<div class="header">
+<div {border-color: black;}>
+<img src="https://media.giphy.com/media/J2sW31Hl5pbZzsKl1F/giphy.gif" border="3">
+</div>
+</div>
+<hr>
+<!-- Menu Navigation -->
+<div class="topnav">
+  <a href="xbox.html">XBOX</a>
+    <a href="wii.html">WII</a>
+    <a href="gamecube.html">GAMECUBE</a>
+  <a href="deals.html">DEALS</a>
+  <a href="order.html">ORDER</a>
+  <a href="whyus.html">WHY US</a>
+  <a href="contact.html">CONTACT US</a>
+</div>
+<!-- Google Translate --> 
+<script type="text/javascript">
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+}
+</script>
 
-<center>
-<img id="Image1" src="comingsoon.png" style="border-width:0px;" />
-<h3>Our new site is not quite ready yet.  Come back soon!</h3>
-<div style="margin-left: 10px;margin-right: 5px;color:red;font-size:22px">
- <a id="ewr" href="http://isom.biz/adpr297/">PreOwnedGames</a>
- </div>
-</center>
-</form>
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+<hr>
+<br>
+<!-- W3 Schools Slideshow --> 
+<div class="center" style="max-width:350px">
+  <img class="mySlides" src="xbox1.jpg" style="height:500px; width:350px">
+  <img class="mySlides" src="wii1.jpg" style="height:500px; width:350px">
+  <img class="mySlides" src="xbox2.jpg" style="height:500px; width:350px">
+  <img class="mySlides" src="xbox8.jpg" style="height:500px; width:350px">
+  <img class="mySlides" src="wii2.jpg" style="height:500px; width:350px">
+  <img class="mySlides" src="xbox4.jpg" style="height:500px; width:350px">
+  <img class="mySlides" src="wii3.jpg" style="height:500px; width:350px">
+  <img class="mySlides" src="gamecube1.jpg" style="height:500px; width:350px">
+  <img class="mySlides" src="gamecube2.jpg" style="height:500px; width:350px">
+  <img class="mySlides" src="xbox5.jpg" style="height:500px; width:350px">
+  <img class="mySlides" src="xbox6.jpg" style="height:500px; width:350px">
+  <img class="mySlides" src="wii4.jpg" style="height:500px; width:350px">
+</div>
+
+<script>
+var myIndex = 0;
+carousel();
+
+function carousel() {
+  var i;
+  var x = document.getElementsByClassName("mySlides");
+  for (i = 0; i < x.length; i++) {
+    x[i].style.display = "none";  
+  }
+  myIndex++;
+  if (myIndex > x.length) {myIndex = 1}    
+  x[myIndex-1].style.display = "block";  
+  setTimeout(carousel, 2000); // Change image every 2 seconds
+}
+</script> <br>
+<div style="text-align: center;color:maroon;font-size:18px"><strong>TERMS &amp; CONDITIONS</strong></div>
+<div style="margin-left: 10px;margin-right: 5px;">
+Game prices may change and are valid for today only. Prices do not include state taxes or shipping charges (COD).
+Our games have been tested and are in full working condition. 
+Not responsible for non-working consoles that cannot play our games.  
+All sales are subject to site manager approval. By ordering, you release PreOwnedVideoGames from any claim relating to 
+the product (including but not limited to loss of a device or its contents) or any music, pictures or other data stored on it. 
+You also release PreOwnedVideoGames & it's principals from any claim 
+for loss or unauthorized access, use or disclosure of any personal or private data or information stored on the device. 
+All trades are final barring damaged/non-operative games.  Please, no dealers.  Cannot be combined with any other offer. Offers valid only towards items normally accepted in trade. Offer valid in the United States, Puerto Rico and Guam only. Void where prohibited. PreOwnedVideoGames reserves the right to cancel, 
+terminate, modify or suspend the offer for any reason without notice. 
+
+<br>
+<div class="footer"> Site Created by Tyler Treadway <a href="mailto:TTreadway@suffolk.edu?Subject=ADPR297%20Site%20Feedback" target="_top">TTreadway@suffolk.edu</a> 
+</div>
 </body>
 </html>
