--- a/xbox.html
+++ b/xbox.html
@@ -1,3 +1,4 @@
+
  <!--%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
   % 
   % Author:  Tyler Treadway
@@ -32,6 +33,8 @@
   <meta name="description" content="Pre-Owned XBOX WII GAMECUBE Video Games For Sale">
   <meta name="keywords" content="Pre, Owned, Pre-Owned, Video, Video Games, Games, Used, Xbox, Wii, GameCube">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
+<div google-analytics-link="content.html"></div>
 
 <!-- CSS -->
 <style>
@@ -349,5 +352,38 @@ individually tested and most are in mint or excellent condition.  Already have a
  </form>
 <div class="footer"> Site Created by Tyler Treadway <a href="mailto:TTreadway@suffolk.edu?Subject=ADPR297%20Site%20Feedback" target="_top">TTreadway@suffolk.edu</a> 
 </div>
+
+<script>
+function includeHTML() {
+  var z, i, elmnt, file, xhttp;
+  /* Loop through a collection of all HTML elements: */
+  z = document.getElementsByTagName("*");
+  for (i = 0; i < z.length; i++) {
+    elmnt = z[i];
+    /*search for elements with a certain atrribute:*/
+    file = elmnt.getAttribute("google-analytics-link");
+    if (file) {
+      /* Make an HTTP request using the attribute value as the file name: */
+      xhttp = new XMLHttpRequest();
+      xhttp.onreadystatechange = function() {
+        if (this.readyState == 4) {
+          if (this.status == 200) {elmnt.innerHTML = this.responseText;}
+          if (this.status == 404) {elmnt.innerHTML = "Page not found.";}
+          /* Remove the attribute, and call this function once more: */
+          elmnt.removeAttribute("google-analytics-link");
+          includeHTML();
+        }
+      }
+      xhttp.open("GET", file, true);
+      xhttp.send();
+      /* Exit the function: */
+      return;
+    }
+  }
+}
+</script>
+<script>
+includeHTML();
+</script>
 </body>
 </html>
