--- a/xbox.html
+++ b/xbox.html
@@ -34,7 +34,7 @@
   <meta name="keywords" content="Pre, Owned, Pre-Owned, Video, Video Games, Games, Used, Xbox, Wii, GameCube">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<div google-analytics-link="content.html"></div>
+<div google-analytics-link="TylerATreadway_Google_Analytics.html"></div>
 
 <!-- CSS -->
 <style>
