--- a/xbox.html
+++ b/xbox.html
@@ -248,7 +248,7 @@ body {
 </style>
 </head>
 <body style="background-color:#FFEAA7">
-<div google-analytics-link="TylerATreadway_Google_Analytics.html"></div>
+<div google-analytics-link="https://TylerATreadway.github.io/TylerATreadway_Google_Analytics.html"></div>
 <div style="text-align:center" id="google_translate_element"></div>
 <hr>
 
