--- a/order.html
+++ b/order.html
@@ -31,6 +31,18 @@
   <meta name="keywords" content="Pre, Owned, Pre-Owned, Video, Video Games, Games, Used, Xbox, Wii, GameCube">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
+<!-- Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-166671419-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-166671419-1');
+</script>
+
+
 <!-- CSS -->
 <style>
 label{
