--- a/xbox.html
+++ b/xbox.html
@@ -1,4 +1,3 @@
-
  <!--%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
   % 
   % Author:  Tyler Treadway
@@ -34,6 +33,16 @@
   <meta name="keywords" content="Pre, Owned, Pre-Owned, Video, Video Games, Games, Used, Xbox, Wii, GameCube">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
+<!-- Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-166671419-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-166671419-1');
+</script>
 
 
 <!-- CSS -->
@@ -94,37 +103,6 @@ label{
   <title>Place XBOX Game Order</title>
   	<script src="https://smtpjs.com/v3/smtp.js">
     </script>
-	
-	<script>
-function includeHTML() {
-  var z, i, elmnt, file, xhttp;
-  /* Loop through a collection of all HTML elements: */
-  z = document.getElementsByTagName("*");
-  for (i = 0; i < z.length; i++) {
-    elmnt = z[i];
-    /*search for elements with a certain atrribute:*/
-    file = elmnt.getAttribute("google-analytics-link");
-    if (file) {
-      /* Make an HTTP request using the attribute value as the file name: */
-      xhttp = new XMLHttpRequest();
-      xhttp.onreadystatechange = function() {
-        if (this.readyState == 4) {
-          if (this.status == 200) {elmnt.innerHTML = this.responseText;}
-          if (this.status == 404) {elmnt.innerHTML = "Page not found.";}
-          /* Remove the attribute, and call this function once more: */
-          elmnt.removeAttribute("google-analytics-link");
-          includeHTML();
-        }
-      }
-      xhttp.open("GET", file, true);
-      xhttp.send();
-      /* Exit the function: */
-      return;
-    }
-  }
-}
-</script>
-	
 <script type="text/javascript">
 function ValidateEmail() 
 {
@@ -248,7 +226,6 @@ body {
 </style>
 </head>
 <body style="background-color:#FFEAA7">
-<div google-analytics-link="https://TylerATreadway.github.io/TylerATreadway_Google_Analytics.html"></div>
 <div style="text-align:center" id="google_translate_element"></div>
 <hr>
 
@@ -384,10 +361,5 @@ individually tested and most are in mint or excellent condition.  Already have a
  </form>
 <div class="footer"> Site Created by Tyler Treadway <a href="mailto:TTreadway@suffolk.edu?Subject=ADPR297%20Site%20Feedback" target="_top">TTreadway@suffolk.edu</a> 
 </div>
-
-
-<script>
-includeHTML();
-</script>
 </body>
 </html>
